# rsge-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  customs-client.md  enums.md  exceptions.md  getting-started.md  invoice-client.md  models.md  waybill-client.md
docs/RS.ge/: CustomsDeclarations_v1.html  postman(1).json  postman(2).json  postman.json
examples/: basic_invoice.py  basic_waybill.py  buyer_confirmation.py  catalog_management.py  create_declaration.py  customs_declarations.py  distribution.py  error_handling.py  invoice_management.py  invoice_reference_data.py  query_waybills.py  reference_data.py  templates.py  transporter.py
rsge/: __init__.py
rsge/core/: exceptions.py  transport.py  xml_utils.py
rsge/customs/: client.py  models.py
rsge/invoice/: client.py  enums.py  models.py
rsge/waybill/: client.py  enums.py  models.py
tests/: test_imports.py  test_invoice_models.py
